- add index.html - add more data to the runs